2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.csproj: Don't make local copies of project
	  references.

2009-08-04  Mike Krüger  <mkrueger@novell.com>

	* Syntax/CSharpSyntaxMode.cs: fixed "Bug 527655 - Preprocessor
	  disabled code still makes "if" coloured".

2009-08-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: Added new line for
	  parameterless methods summary documentation.

2009-08-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs:
	* FormattingStrategy/CSharpIndentEngine.cs: Fixed "Bug 507668
	  - Wrong smart-indentation behavior in monodevelop solution
	  itself".

2009-08-03  Mike Krüger  <mkrueger@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs: fixed "Bug 527151
	  – smart indent: indents "too much" after "new O () { ... }"
	  object initialisation without trailing ','".

2009-08-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Fixed "Bug 527338 - Wrong type
	  shown in tooltip when param name clashes with field name".

2009-07-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: Fixed failing unit test.

2009-07-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: Fixed 'Bug 526667 - wrong
	  code completion in object initialisation (new O() {...};)'.

2009-07-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/MemberCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Worked on xml
	  documentation display.

2009-07-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Added null check.

2009-07-29  Mike Krüger  <mkrueger@novell.com>

	* Gui/MemberCompletionData.cs:
	* Parser/FindMemberAstVisitor.cs:
	* Gui/NRefactoryParameterDataProvider.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Handled
	  parameter documentation.

2009-07-29  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs:
	* Gui/MemberCompletionData.cs: Custom xml documentation is now