@@ -1,3 +1,8 @@
+2009-08-15  Mike Krüger  <mkrueger@novell.com>
+
+	* Parser/FindMemberAstVisitor.cs: Fixed "Bug 531525 -
+	  Refactoring + Renaming fails for delegate"
+
 2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* CSharpBinding.csproj: Don't make local copies of project
